# SIVO

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.md  README.md  build.sh
cmake_modules/: FindG2O.cmake
config/bayesian_segnet/basic/kitti/: bayesian_segnet_basic_kitti.caffemodel  bayesian_segnet_basic_kitti.prototxt
config/bayesian_segnet/standard/kitti/: bayesian_segnet_kitti.caffemodel  bayesian_segnet_kitti.prototxt
config/kitti/: KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml
include/bayesian_segnet/: bayesian_segnet.hpp
include/orbslam/: Converter.h  Frame.h  FrameDrawer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h
include/sivo_helpers/: sivo_helpers.hpp
src/: sivo.cc
src/bayesian_segnet/: bayesian_segnet.cpp
src/orbslam/: Converter.cc  Frame.cc  FrameDrawer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
src/sivo_helpers/: sivo_helpers.cpp
tests/: test_bayesian_segnet.cpp
tests/config/: test_model.prototxt
